--- a/mall-party/src/main/resources/application.yml
+++ b/mall-party/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
     alicloud:
       oss:
         bucket: mall-ljzhang-zian
-        endpoint: oss-cn-chengdu.aliyuncs.com
-      access-key: LTAI5tJ6zUqrbFzDuZEQQzyU
-      secret-key: m3PWLgvhq1mp77IQXadWoNceUBIXNJ
+        endpoint: 
+      access-key: 
+      secret-key: 
 
 
 
